Fix spacing issues

--- a/themes/nica/assets/style/layout/_layout.scss
+++ b/themes/nica/assets/style/layout/_layout.scss
@@ -7,7 +7,7 @@
 
 html {
   font-family: $primary-font-family;
-  font-size: 1rem;
+  font-size: 18px;
   color: $text-color;
   height: 100%;
 }
