--- a/themes/nica/assets/style/pages/_cv.scss
+++ b/themes/nica/assets/style/pages/_cv.scss
@@ -27,7 +27,7 @@ main.page.cv {
       position: absolute;
       display: block;
       top: 0px;
-      left: -2.65rem;
+      left: -2.6rem;
       height: 0;
       width: 0;
       border-radius: 100%;
@@ -80,7 +80,7 @@ main.page.cv {
       position: relative;
       margin-left: 1.2rem;
       &:before {
-        left: -36px;
+        left: -1.8rem;
       }
     }
 
